src/containers/CaseStudy/slices/Gallery/Gallery.scss
.caseStudy__gallery {
  position: relative;
  overflow: hidden;
  outline: none;
  cursor: pointer;

  &__indicators {
    display: flex;
    margin-top: 30px;
    align-items: center;
    width: 100%;
    justify-content: center;
  }

  &__indicator {
    width: 40px;
    height: 4px;
    background: black;
    opacity: .15;
    display: inline-block;
    margin: 0 10px;
    transition: 600ms opacity ease;

    &--active {
      z-index: 100;
      position: relative;
      opacity: .75;
    }
  }
  &__img {
    bottom: 0;
    left: 0;
    position: absolute;
    right: 0;
    top: 0;
    transform: scale(1.05);
    width: 100%;
    opacity: 0;
    transition: 1000ms opacity ease, 1000ms transform ease;

    &--current {
      opacity: 1;
      transform: scale(1);
    }
  }

  &__nav {
    position: absolute;
    top: 0;
    bottom: 0;
    z-index: 10;

    &--prev {
      left: 0;
      right: 50%;
    }
  }
}

